# vgi-tantivy

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
crates/tantivy-wasm/: Cargo.toml
crates/tantivy-wasm/src/: lib.rs
crates/tantivy-worker/: Cargo.toml
crates/tantivy-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  search.rs
crates/tantivy-worker/src/scalar/: analyze.rs  mod.rs  score.rs  version.rs
crates/tantivy-worker/src/table/: bm25_search.rs  mod.rs  supported_languages.rs
crates/tantivy-worker/tests/: search.rs
test/sql/: analyze.test  search.test
wasm/: build.sh
