[workspace]
resolver = "2"
members = ["crates/tantivy-worker", "crates/tantivy-wasm"]
# tantivy-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p tantivy-wasm`.
default-members = ["crates/tantivy-worker"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-tantivy"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by tantivy-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target can opt in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
# Features are additive, and the two are behind mutually-exclusive target cfgs.
# Keep the arrow entries below in lockstep with what `vgi` requires so a single
# arrow resolves.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

# tantivy — the Rust full-text search engine (MIT). Pinned to the 0.24 line: its
# MSRV is under the workspace rust-version (1.86) and it builds cleanly there;
# 0.25/0.26 bump the toolchain past 1.86. We use only the in-process RAM-directory
# index, its BM25 scoring, and its tokenizer/Snowball-stemmer stack — no on-disk
# index, no mmap persistence.
tantivy = "=0.24.2"

# JSON parsing for the `bm25_search` docs payload (a JSON array of strings or
# {"id","text"} objects). serde_json's MSRV is well under 1.86.
serde_json = "1"

# NOTE — MSRV (1.86) lockfile pins. tantivy's transitive graph otherwise resolves
# crates that require Rust ≥ 1.87/1.88. Cargo.lock is pinned back via
# `cargo update -p <crate> --precise <ver>` to keep the whole graph ≤ 1.86:
#   time     0.3.41   (→ time-core 0.1.4, time-macros 0.2.22)
#   darling  0.20.11
#   wasip2   1.0.0+wasi-0.2.4
# If you bump `tantivy`, re-check these. See CLAUDE.md "Sharp edges" #1.
