[package]
name = "tantivy-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker bringing tantivy full-text search (BM25 ranking) plus tokenization and Snowball stemming to DuckDB over Apache Arrow"

[[bin]]
name = "tantivy-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
tantivy.workspace = true
serde_json.workspace = true
log = "0.4"
env_logger = "0.11"
